k8sresources/ratings-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      service: ratings
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: ratings
    spec:
      containers:
      - image: quay.io/robotshop/rs-ratings:latest
        imagePullPolicy: IfNotPresent
        name: ratings
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          failureThreshold: 30
          httpGet:
            path: /_health
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
